; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_act_gact.c_tcf_gact_cleanup.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_act_gact.c_tcf_gact_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tc_action = type { %struct.tcf_gact* }
%struct.tcf_gact = type { i32 }

@gact_hash_info = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tc_action*, i32)* @tcf_gact_cleanup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tcf_gact_cleanup(%struct.tc_action* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.tc_action*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.tcf_gact*, align 8
  store %struct.tc_action* %0, %struct.tc_action** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.tc_action*, %struct.tc_action** %4, align 8
  %8 = getelementptr inbounds %struct.tc_action, %struct.tc_action* %7, i32 0, i32 0
  %9 = load %struct.tcf_gact*, %struct.tcf_gact** %8, align 8
  store %struct.tcf_gact* %9, %struct.tcf_gact** %6, align 8
  %10 = load %struct.tcf_gact*, %struct.tcf_gact** %6, align 8
  %11 = icmp ne %struct.tcf_gact* %10, null
  br i1 %11, label %12, label %17

12:                                               ; preds = %2
  %13 = load %struct.tcf_gact*, %struct.tcf_gact** %6, align 8
  %14 = getelementptr inbounds %struct.tcf_gact, %struct.tcf_gact* %13, i32 0, i32 0
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @tcf_hash_release(i32* %14, i32 %15, i32* @gact_hash_info)
  store i32 %16, i32* %3, align 4
  br label %18

17:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %18

18:                                               ; preds = %17, %12
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i32 @tcf_hash_release(i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
